# brioche-merge-manager

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  config.rs  event.rs  main.rs  tui.rs
src/github/: client.rs  graphql.rs  mod.rs  models.rs  rest.rs
src/ui/: mod.rs  pr_detail.rs  pr_diff.rs  pr_list.rs
