[package]
name = "brioche-merge-manager"
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
crossterm = "0.29.0"
dotenvy = "0.15.7"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", default-features = false, features = [
  "json",
  "rustls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
webbrowser = "1.2.0"
